style/style.css
/* ANIMATION */
@keyframes loader {
	0% {
		transform: scaleY(0.1);
		background: transparent;
	}

	50% {
		transform: scaleY(1);
		background: #9356DC;
	}

	100% {
		transform: scaleY(0.1);
		background: transparent;
	}
}

@keyframes content {
	0% {
		opacity:0;
	}
	25% {
		opacity:0.25;
	}
	50% {
		opacity:0.5;
	}
	75% {
		opacity:0.75;
	}
	100% {
		opacity:1;
	}
}

.loader {
	top: 50%;
	left: 51.5%;
	transform: translate(-50%, -50%);
	position: absolute;
	display:flex;
	justify-content:center;
	align-items:center;
}

.bar {
	width: 10px;
	margin:1px;
	height: 70px;
	background: #fff;
	display: inline-block;
	transform-origin: bottom center;
	border-top-right-radius: 20px;
	border-top-left-radius: 20px;
	animation: loader 1.2s ease-in-out infinite;
}

.bar1 {
	animation-delay: 0.1s;
}

.bar2 {
	animation-delay: 0.2s;
}

.bar3 {
	animation-delay: 0.3s;
}

.bar4 {
	animation-delay: 0.4s;
}

.bar5 {
	animation-delay: 0.5s;
}

.bar6 {
	animation-delay: 0.6s;
}

.bar7 {
	animation-delay: 0.7s;
}

.bar8 {
	animation-delay: 0.8s;
}

.content {
	animation: content 1000ms 1450ms both;
}

/* ============================COEUR========================== */

.bloc-rest__info-bloc .bloc-rest__container-hearth {
	display: flex;
	width: 22px;
	margin-bottom: auto;
	margin-top: auto;
  }
  .bloc-rest__info-bloc .bloc-rest__container-hearth:hover .bloc-rest__hearth-full {
	visibility: visible;
  }
  .bloc-rest__info-bloc .bloc-rest__container-hearth:hover .bloc-rest__hearth-empty {
	visibility: hidden;
  }
  
  .bloc-rest__hearth-full {
	visibility: hidden;
  }
  
  .bloc-rest__container-hearth i {
	width: 0;
	height: 0;
	font-size: 22px;
	cursor:pointer;
  }

  .fa-regular {
	color : grey;
  }

  .bloc-rest__container-hearth {
	color: #f2f2f2;
}
  
  .bloc-rest__container-hearth:hover {
	cursor:pointer;
	transition: 1000ms;
	background: linear-gradient(#FF79DA, #9356DC);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}
/* ========================================================= */
body {
	font-family: "Roboto", sans-serif;
	font-weight: 300;
	background-color: #E6E6E6;
	margin: 0px;
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	background: #fff;
	min-width: 415px;
}

    
/* HEADER */

.header__logo {
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: white;
	height: 100px;
	box-shadow: 0px 3px 8px 1px rgba(156, 156, 156, 0.39);
}

.header__logo img {
	object-fit: cover;
	height: 35px;
}

header {
	background-color: #d9d9d9;
}

header p {
	display: flex;
	justify-content: center;
}

header i {
	margin-right: 15px;
}

.header-hook {
	padding: 10px 45px 45px 45px;
	text-align: center;
	background-color: #f2f2f2;
}

.bloc-rest {
	height: 300px;
	width: 95%;
	margin: 20px;
	background-color: white;
	border-radius: 15px;
	box-shadow: 0px 3px 8px 1px rgba(156, 156, 156, 0.39);
}

.bloc-rest img {
	object-fit: cover;
	height: 50px;
	object-fit: cover;
	border-radius: 15px 15px 0px 0px;
	height: 70%;
	width: 100%;
}

.degrad-btn {
	background: linear-gradient(#FF79DA, #9356DC);
	color: white;
	font-weight: bold;
	font-size: 0.9em;
	height: 50px;
	width: 60%;
	max-width: 350px;
	min-width: 175px;
	border-radius: 30px;
	border-style: none;
	transition: transform ease-in-out 0.6s;
}

.degrad-btn:hover {
	transform: scale(1.1);
}

.bloc-fctn {
	background-color: white;
	padding-top: 25px;
	padding-bottom: 55px;
	display: flex;
	flex-direction: column;
	align-items: center;
	transition: ease-in-out 1s;
}

.bloc-fctn h2 {
	margin-left: 20px;
}

.bloc-fctn__num1 {
	width: 25px;
	height: 25px;
	background-color: #9356DC;
	font-size: 0.8em;
	color: white;
	border-radius: 15px;
	display: flex;
	justify-content: center;
	align-items: center;
	margin-right: -35px;
	z-index: 1;
}

.bloc-fctn__num1::before {
	content: "1";
}

.bloc-fctn__num2 {
	width: 25px;
	height: 25px;
	background-color: #9356DC;
	font-size: 0.8em;
	color: white;
	border-radius: 15px;
	display: flex;
	justify-content: center;
	align-items: center;
	margin-right: -35px;
	z-index: 1;
}

.bloc-fctn__num2::before {
	content: "2";
}

.bloc-fctn__num3 {
	width: 25px;
	height: 25px;
	background-color: #9356DC;
	font-size: 0.8em;
	color: white;
	border-radius: 15px;
	display: flex;
	justify-content: center;
	align-items: center;
	margin-right: -35px;
	z-index: 1;
}

.bloc-fctn__num3::before {
	content: "3";
}

.bloc-fctn__line {
	display: flex;
	align-items: baseline;
}

.overpanel-rest {
	background-color: #f2f2f2;
}

.panel-rest {
	background-color: #f2f2f2;
	margin-top: -20px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.new {
	position: absolute;
	font-weight: bold;
	background-color: #99e2d0;
	color: #008766;
	width: 90px;
	height: 35px;
	border-radius: 2px;
	display: flex;
	justify-content: center;
	align-items: center;
	margin-left: 71%;
	margin-top: 20px;
}

.bloc-rest__info-bloc {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: baseline;
	padding: 5px 28px 10px 18px;
}

.bloc-rest__hearth i {
	font-size: 1.4em;
	color: #616060;
	cursor: pointer;
}

.bloc-rest__hearth i:hover {
	color: linear-gradient(#FF79DA, #9356DC);
}

.bloc-rest__txt {
	line-height: 0.5em;
}

.bloc-fctn__txt {
	background-color: #f2f2f2;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	margin: 20px;
	border-radius: 15px;
	width: 300px;
	height: 50px;
	box-shadow: 0px 3px 8px 1px rgba(156, 156, 156, 0.39);
	transition: ease 2s;
}

.bloc-fctn__txt:hover {
	background: #f5edff;
}

.bloc-fctn__txt i {
	margin-right: 25px;
	color: grey;
}

.bloc-fctn__txt i:hover {
	margin-right: 25px;
	color: #9356DC;
}

section {
	background-color: white;
	padding-top: 15px;
	display: flex;
	flex-direction: column;
}

section h2 {
	margin-left: 25px;
}

footer {
	background-color: #353535;
}

footer i {
	margin-right: 15px;
}

.footer__logo {
	padding: 25px 0px 25px 25px;
	color: white;
}

.footer__logo img {
	object-fit: cover;
	height: 25px;
	filter: invert(1);
}
  /*# sourceMappingURL=teststyle.css.map */

